--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ after_success:
 deploy:
   skip_cleanup: true
   provider: releases
-  file: jwtproxy
+  file: che-plugin-broker
   on:
     tags: true
     repo: eclipse/che-plugin-broker
