Rework Dockerfile to a better approach
Signed-off-by: Oleksandr Garagatyi <ogaragat@redhat.com>

--- a/brokers/che-plugin-broker/Dockerfile
+++ b/brokers/che-plugin-broker/Dockerfile
@@ -10,14 +10,17 @@
 #   Red Hat, Inc. - initial API and implementation
 #
 
-FROM golang:1.10.3 as builder
-WORKDIR /go/src/github.com/eclipse/che-plugin-broker/
+FROM golang:1.10-alpine as builder
+RUN apk update && apk add ca-certificates
+RUN adduser -D -g '' appuser
+WORKDIR $GOPATH/src/github.com/eclipse/che-plugin-broker/
 COPY . .
 WORKDIR /go/src/github.com/eclipse/che-plugin-broker/brokers/che-plugin-broker/
 RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo -o che-plugin-broker main.go
 
 
-FROM alpine:3.7
-RUN apk add --no-cache ca-certificates
+FROM scratch
+COPY --from=builder /etc/passwd /etc/passwd
+COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /go/src/github.com/eclipse/che-plugin-broker/brokers/che-plugin-broker/che-plugin-broker /usr/local/bin
 ENTRYPOINT ["che-plugin-broker"]
