--- a/brokers/che-plugin-broker/Dockerfile
+++ b/brokers/che-plugin-broker/Dockerfile
@@ -15,12 +15,12 @@ RUN apk update && apk add ca-certificates
 RUN adduser -D -g '' appuser
 COPY . /go/src/github.com/eclipse/che-plugin-broker/
 WORKDIR /go/src/github.com/eclipse/che-plugin-broker/brokers/che-plugin-broker/
-RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo -o che-plugin-broker main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o che-plugin-broker main.go
 
 
 FROM scratch
 USER appuser
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-COPY --from=builder /go/src/github.com/eclipse/che-plugin-broker/brokers/che-plugin-broker/che-plugin-broker /usr/local/bin
-ENTRYPOINT ["che-plugin-broker"]
+COPY --from=builder /go/src/github.com/eclipse/che-plugin-broker/brokers/che-plugin-broker/che-plugin-broker /
+ENTRYPOINT ["/che-plugin-broker"]
