--- a/brokers/theia-plugin-broker/Dockerfile
+++ b/brokers/theia-plugin-broker/Dockerfile
@@ -11,14 +11,14 @@
 #
 
 FROM golang:1.10-alpine as builder
-RUN apk update && apk add ca-certificates
+RUN apk add --no-cache ca-certificates
 RUN adduser -D -g '' appuser
-COPY . /go/src/github.com/eclipse/che-plugin-broker/
 WORKDIR /go/src/github.com/eclipse/che-plugin-broker/brokers/theia-plugin-broker/
+COPY . /go/src/github.com/eclipse/che-plugin-broker/
 RUN CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o theia-plugin-broker main.go
 
 
-FROM scratch
+FROM alpine:3.7
 USER appuser
 COPY --from=builder /etc/passwd /etc/passwd
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
