--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,6 +1,14 @@
 [[constraint]]
+  name = "github.com/eclipse/che-go-jsonrpc"
+  version = "=0.1.0"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "=1.2.2"
+
+[[constraint]]
+  version = "=2.2.1"
   name = "gopkg.in/yaml.v2"
-  version = "=v2.2.1"
 
 [prune]
   go-tests = true
