--- a/.travis.yml
+++ b/.travis.yml
@@ -10,15 +10,14 @@ env:
      - COMMIT=${TRAVIS_COMMIT::8}
 before_script:
   - curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | bash -s -- -b $GOPATH/bin v1.10.2
-before_deploy:
-- CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo -o che-plugin-broker main.go
-after_success:
-- CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo -o che-plugin-broker main.go
 before_install:
 - go get -u github.com/golang/dep/cmd/dep
 install: true
 script:
-- golangci-lint run -v      # run a bunch of code checkers/linters in parallel
+- CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo ./...
+- golangci-lint run -v    # run a bunch of code checkers/linters in parallel
 - go test -v -race ./...  # Run all the tests with the race detector enabled
+- cd brokers/che-plugin-broker; CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o che-plugin-broker main.go
+- cd brokers/theia-plugin-broker; CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o theia-plugin-broker main.go
 notifications:
   email: false
