--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,4 @@
 # Ignore binaries with these names but not folders with the same names
 */che-plugin-broker/che-plugin-broker
 */theia-plugin-broker/theia-plugin-broker
+*/vscode-extension-broker/cmd/vscode-extension-broker
