--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ script:
 - go test -v -race ./...  # Run all the tests with the race detector enabled
 - cd brokers/che-plugin-broker; CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o che-plugin-broker main.go
 - cd brokers/theia-plugin-broker; CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o theia-plugin-broker main.go
+- cd brokers/vscode/cmd; CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o vscode-extension-broker main.go
 notifications:
   email: false
