--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 # Ignore binaries with these names but not folders with the same names
 che-plugin-broker
 theia-plugin-broker
+init-plugin-broker
+*/init/init
 !che-plugin-broker/
 !theia-plugin-broker/
 
