--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,6 @@
 # Ignore binaries with these names but not folders with the same names
-*/che-plugin-broker/che-plugin-broker
-*/theia-plugin-broker/theia-plugin-broker
-*/init/init-plugin-broker
-*/init/init
-*/vscode-extension-broker/cmd/vscode-extension-broker
+*/che-plugin-broker/cmd/che-plugin-broker
+*/theia/cmd/theia-plugin-broker
+*/init/cmd/init-plugin-broker
+*/vscode/cmd/vscode-extension-broker
+*/cmd/cmd
