Make Che 7 all fields camel-case
Signed-off-by: Oleksandr Garagatyi <ogaragat@redhat.com>

--- a/brokers/vscode/cmd/config.json
+++ b/brokers/vscode/cmd/config.json
@@ -9,7 +9,7 @@
     "icon": "https://www.eclipse.org/che/images/ico/16x16.png",
     "attributes": {
 	"extension": "vscode:extension/ms-kubernetes-tools.vscode-kubernetes-tools",
-	"container-image": "garagatyi/remotetheia:kubectl"
+	"containerImage": "garagatyi/remotetheia:kubectl"
     }
 }
 ]
