--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,33 +5,20 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version
       - image: circleci/golang:1.10
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
     working_directory: /go/src/github.com/eclipse/che-plugin-broker
     steps:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s -- -d v1.10.2
+      - run: wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.10.2
+      # copuing is needed because of behavior of linter install script, see https://github.com/golangci/golangci-lint/issues/250
       - run: sudo cp ./bin/golangci-lint $GOPATH/bin/
       - run: CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo ./...
       - run: go test -v -race ./...
       - run: golangci-lint run -v
-      - run: cd brokers/che-plugin-broker/cmd
-      - run: CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o che-plugin-broker main.go
-      - run: cd ../../theia/cmd
-      - run: CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o theia-plugin-broker main.go
-      - run: cd ../../vscode/cmd
-      - run: CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o vscode-extension-broker main.go
-      - run: cd ../../init/cmd
-      - run: CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o init-plugin-broker main.go
+      - run: cd brokers/che-plugin-broker/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o che-plugin-broker main.go
+      - run: cd brokers/theia/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o theia-plugin-broker main.go
+      - run: cd brokers/vscode/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o vscode-extension-broker main.go
+      - run: cd brokers/init/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o init-plugin-broker main.go
