--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,15 +5,15 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.10
+      - image: circleci/golang:1.12
 
     working_directory: /go/src/github.com/eclipse/che-plugin-broker
     steps:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.10.2
-      # copuing is needed because of behavior of linter install script, see https://github.com/golangci/golangci-lint/issues/250
+      - run: wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.15.0
+      # copying is needed because of behavior of linter install script, see https://github.com/golangci/golangci-lint/issues/250
       - run: sudo cp ./bin/golangci-lint $GOPATH/bin/
       - run: CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo ./...
       - run: go test -v -race ./...
