Add unified plugin broker
This broker is capable of processing Che plugins of all
types. Depending on the plugin type it calls an appropriate
plugin broker implementation.
Signed-off-by: Oleksandr Garagatyi <ogaragat@redhat.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,3 +22,4 @@ jobs:
       - run: cd brokers/theia/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o theia-plugin-broker main.go
       - run: cd brokers/vscode/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o vscode-extension-broker main.go
       - run: cd brokers/init/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o init-plugin-broker main.go
+      - run: cd brokers/unified/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o unified-broker main.go
