--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,38 @@
 # Golang CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2
+version: 2.0
 jobs:
   build:
     docker:
       - image: circleci/golang:1.12
-
     working_directory: /go/src/github.com/eclipse/che-plugin-broker
     steps:
       - checkout
-
-      # specify any bash command here prefixed with `run: `
-      - run: wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.15.0
-      # copying is needed because of behavior of linter install script, see https://github.com/golangci/golangci-lint/issues/250
-      - run: sudo cp ./bin/golangci-lint $GOPATH/bin/
-      - run: CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo ./...
-      - run: go test -v -race ./...
-      - run: golangci-lint run -v
-      - run: cd brokers/init/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o init-plugin-broker main.go
-      - run: cd brokers/unified/cmd && CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -installsuffix cgo -o unified-broker main.go
+      - run: 
+          # copying is needed because of behavior of linter install script, see https://github.com/golangci/golangci-lint/issues/250
+          name: "Install GolangCI linter"
+          command: |
+            wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.15.0
+            sudo cp ./bin/golangci-lint $GOPATH/bin/
+      - run: 
+          name: "Build sources"
+          command: |
+            CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-w -s' -a -installsuffix cgo ./...
+      - run: 
+          name: "Run tests"
+          command: |
+            go test -v -race ./... -coverprofile=c.out -covermode=atomic
+            go tool cover -html=c.out -o coverage.html
+            cp coverage.html /tmp/artifacts
+            cp c.out coverage.txt
+      - run:
+          name: "Save coverage to codecov"
+          command: |
+            bash <(curl -s https://codecov.io/bash)
+      - run: 
+          name: "Run GolangCI linter"
+          command: |
+            golangci-lint run -v
+      - store_artifacts:
+          path: /tmp/artifacts
