Sync installed plugins in artifact broker
Instead of deleting all installed plugins on every run, store list of
installed plugins upon completion of artifact broker, and use this to
  1. Delete uninstalled / updated plugins
  2. Download only new plugins

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 
 # Ignore binaries with these names but not folders with the same names
-init-plugin-broker
-unified-plugin-broker
+plugin-artifacts-broker
+plugin-metadata-broker
 **/cmd/cmd
 main
 
