Add CPU limit\request and memory request into container model

--- a/brokers/testdata/theia-7.4.0.yaml
+++ b/brokers/testdata/theia-7.4.0.yaml
@@ -66,7 +66,10 @@ spec:
          - exposedPort: 13131
          - exposedPort: 13132
          - exposedPort: 13133
+     memoryRequest: "256M"
      memoryLimit: "512M"
+     CPURequest: "500m"
+     CPULimit: "1000m"
   initContainers:
   - name: remote-runtime-injector
     image: eclipse/che-theia-endpoint-runtime-binary:7.4.0
