Add k8s apimachinery dependency to support processing resources
To allow parsing / working with k8s compute resources (e.g. memory
limit), add k8s apimachinery dependency. Otherwise, parsing and handling
memory limits is very complicated for the general case.

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -10,6 +10,10 @@
   version = "=2.2.1"
   name = "gopkg.in/yaml.v2"
 
+[[constraint]]
+  revision = "e386b2658ed20923da8cc9250e552f082899a1ee"
+  name = "k8s.io/apimachinery"
+
 [prune]
   go-tests = true
   unused-packages = true
