--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ version: 2.0
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.12
+      - image: circleci/golang:1.13
     working_directory: /go/src/github.com/eclipse/che-plugin-broker
     steps:
       - checkout
@@ -13,7 +13,7 @@ jobs:
           # copying is needed because of behavior of linter install script, see https://github.com/golangci/golangci-lint/issues/250
           name: "Install GolangCI linter"
           command: |
-            wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s v1.15.0
+            wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s v1.30.0
             sudo cp ./bin/golangci-lint $GOPATH/bin/
       - run: 
           name: "Build sources"
