Workaround: use plugin ID from first merged plugin instead of generating
Since Che server will not accept plugin IDs that are not in the devfile
spec, it's necessary to reuse an existing plugin ID for merged plugins.
This workaround simply reuses the first plugin ID in the list of merged
plugins.

Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/utils/mergeplugins/testdata/success/combine_volumes_on_mountpath.yaml
+++ b/utils/mergeplugins/testdata/success/combine_volumes_on_mountpath.yaml
@@ -31,10 +31,10 @@ metas:
         - https://test.extension2
 expected:
   - apiVersion: v2
-    id: eclipse-che/merged-testImg/latest
-    publisher: eclipse-che
-    name: merged-testImg
-    version: latest
+    id: testpub/sharedVolume/testver
+    publisher: testpub
+    name: sharedVolume
+    version: testver
     type: theia plugin
     spec:
       containers:
