--- a/utils/mergeplugins/testdata/success/merging_resources.yaml
+++ b/utils/mergeplugins/testdata/success/merging_resources.yaml
@@ -31,10 +31,10 @@ metas:
         - https://test.extension
 expected:
   - apiVersion: v2
-    id: eclipse-che/merged-testImg/latest
-    publisher: eclipse-che
-    name: merged-testImg
-    version: latest
+    id: testpub/testname/testver
+    publisher: testpub
+    name: testname
+    version: testver
     type: theia plugin
     spec:
       containers:
