Cleanup references to dep and move builds out of GOPATH for modules
Signed-off-by: Angel Misevski <amisevsk@redhat.com>

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -84,7 +84,7 @@ commands:
         type: exec
         command: >-
           printf 'Update dependencies...\n' &&
-          make dep-update &&
+          go mod tidy && go mod vendor
           printf "\033[32mDone.\033[0m"
         component: dev
   - name: start plugin artifacts broker
